--- a/css/master.css
+++ b/css/master.css
@@ -32,6 +32,7 @@ h4,
 h5 {
     font-family: var(--f-family);
     line-height: 1.3;
+    margin-bottom: 1rem;
 }
 
 h1 {
@@ -55,6 +56,8 @@ p {
     font-size: var(--font-size-200);
     line-height: 1.6rem;
     letter-spacing: 1px;
+    color: #ccc;
+    margin-bottom: 2rem;
 }
 
 ul {
@@ -268,8 +271,83 @@ header nav .links li a {
 .hero_shape {
     background: url("../images/bottom-header-wave.svg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     height: 100px;
     margin-top: -2px;
 }
+
+
+/* about */
+
+.about-wraper {
+    display: flex;
+}
+
+.about-info,
+.skills-info {
+    padding: 2rem 0;
+}
+
+.about-info h2 {
+    margin-bottom: 1rem;
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .about-wraper {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+/* ./about */
+
+
+/* skilles */
+
+.skilles {
+    background-color: var(--secondary-color);
+}
+
+.skilles::before {
+    content: "";
+    background: url(../images/topwave.svg);
+    height: 83px;
+    width: 100%;
+    display: block;
+    margin-top: -93px;
+}
+
+.skilles::after {
+    content: "";
+    background: url(../images/bottomwave.svg);
+    height: 94px;
+    display: block;
+    position: absolute;
+    width: 100%;
+    background-repeat: no-repeat;
+}
+
+.skills-icons {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.skilles img {
+    width: 100%;
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .skills-icons {
+        flex-direction: row;
+    }
+    .skills-icons .item {
+        width: calc(95% /2);
+    }
+}
+
+
+/* ./skilles */
