edit services icon

--- a/css/master.css
+++ b/css/master.css
@@ -373,12 +373,12 @@ header nav .links li a {
     padding: 2rem;
 }
 
-.services-wraper .box .services-icon {
+.box .services-icon {
     width: 100px;
 }
 
 .box .services-icon img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .box p {
