--- a/css/master.css
+++ b/css/master.css
@@ -70,7 +70,7 @@ a {
 
 img {
     height: auto;
-    width: 100%;
+    max-width: 100%;
 }
 
 .subtitle .title::before {
@@ -373,15 +373,15 @@ header nav .links li a {
     padding: 2rem;
 }
 
-.box .services-icon {
+.services-wraper .box .services-icon {
     width: 100px;
 }
 
-.box .services-icon img {
+.services-wraper .box .services-icon img {
     width: 100%;
 }
 
-.box p {
+.services-wraper .box p {
     width: 100%;
 }
 
@@ -393,3 +393,67 @@ header nav .links li a {
 
 
 /* ./Services */
+
+
+/* latest-work */
+
+.project-wraper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.latest-work {
+    background: url(../images/projectbg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.project-img {
+    height: 320px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.project-img img {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+}
+
+.project_info {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.project_info:hover .project-data {
+    bottom: 0px;
+}
+
+.project-data {
+    position: absolute;
+    bottom: -320px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #7750f8bd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: bottom .2s ease-in-out;
+    -webkit-transition: bottom .2s ease-in-out;
+    -moz-transition: bottom .2s ease-in-out;
+    -ms-transition: bottom .2s ease-in-out;
+    -o-transition: bottom .2s ease-in-out;
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+    .project-wraper {
+        flex-direction: column;
+        /* align-items: center; */
+    }
+}
+
+
+/* ./latest-work */
