--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,8 @@
+
+*,html {
+    margin: 0;
+    padding: 0;
+}
 :root {
     --primary-color: #7750f8;
     --secondary-color: #1d2333;
@@ -10,10 +15,6 @@
     --font-size-700: 4.209rem;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
 
 html {
     font-size: 100%;
@@ -194,15 +195,18 @@ header nav .links li a {
         opacity: 0;
         z-index: 99999;
     }
+
     header nav .links li a {
         display: block;
     }
+
     .links.show {
         right: 0;
         visibility: visible;
         opacity: 1;
     }
-     :root {
+
+    :root {
         --primary-color: #7750f8;
         --secondary-color: #1d2333;
         --f-family: "Raleway", sans-serif;
@@ -212,6 +216,16 @@ header nav .links li a {
         --font-size-500: 2.369rem;
         --font-size-600: 1.5rem;
         --font-size-700: 2.1rem;
+    }
+}
+
+@media (min-width: 768px) {
+    header nav .links li {
+        display: inline-block;
+    }
+
+    .menu-icon {
+        display: none;
     }
 }
 
@@ -225,6 +239,10 @@ header nav .links li a {
     background: var(--secondary-color);
     /* min-height: 100vh; */
     position: relative;
+}
+
+.hero-wraper {
+    display: flex;
 }
 
 .hero_content .title {
@@ -274,6 +292,34 @@ header nav .links li a {
 }
 
 
+@media (min-width: 768px) {
+    :root {
+        --primary-color: #7750f8;
+        --secondary-color: #1d2333;
+        --f-family: "Raleway", sans-serif;
+        --font-size-200: 1rem;
+        --font-size-300: 1.333rem;
+        --font-size-400: 1.2rem;
+        --font-size-500: 2.169rem;
+        --font-size-600: 1.9rem;
+        --font-size-700: 2.8rem;
+    }
+
+    .hero-wraper {
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .hero_content,
+    .hero_image {
+        width: calc(100% / 2);
+    }
+
+
+
+}
+
+
 /* start hero */
 
 .hero_shape {
@@ -290,6 +336,7 @@ header nav .links li a {
 
 .about-wraper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .about-info,
@@ -303,9 +350,24 @@ header nav .links li a {
 
 @media (min-width: 320px) and (max-width: 576px) {
     .about-wraper {
-        display: flex;
+
         flex-direction: column;
     }
+}
+
+@media (min-width: 768px) {
+    .about-wraper {
+        flex-direction: row;
+
+    }
+
+
+    .about-img,
+    .about-info {
+        width: calc(100% /2);
+
+    }
+
 }
 
 
@@ -316,6 +378,11 @@ header nav .links li a {
 
 .skilles {
     background-color: var(--secondary-color);
+
+}
+
+.skills-wraper {
+    display: flex;
 }
 
 .skilles::before {
@@ -340,7 +407,7 @@ header nav .links li a {
 .skills-icons {
     display: flex;
     gap: 5px;
-    flex-wrap: wrap;
+
     justify-content: space-between;
 }
 
@@ -349,14 +416,44 @@ header nav .links li a {
 }
 
 @media (min-width: 320px) and (max-width: 576px) {
+    .skills-wraper {
+        flex-direction: column;
+    }
+
     .skills-icons {
         flex-direction: row;
     }
+
     .skills-icons .item {
         width: calc(95% /2);
     }
 }
 
+@media (min-width: 768px) {
+    .skills-wraper {
+        flex-direction: row;
+    }
+
+    .skills_image,
+    .skills-info {
+        width: calc(100% / 2);
+    }
+
+    .skills-icons {
+        flex-direction: row;
+
+    }
+
+    .item {
+        flex-wrap: nowrap;
+        width: calc(100% / 3);
+
+    }
+
+    .skills_image img {
+        width: 90%;
+    }
+}
 
 /* ./skilles */
 
@@ -365,12 +462,12 @@ header nav .links li a {
 
 .services-wraper {
     display: flex;
-    gap: 1rem;
+
 }
 
-.services-wraper .box {
+.box {
     background: var(--secondary-color);
-    padding: 2rem;
+    padding: 1.1rem;
 }
 
 .services-wraper .box .services-icon {
@@ -390,6 +487,21 @@ header nav .links li a {
         flex-direction: column;
     }
 }
+
+@media (min-width: 768px) {
+
+    .services-wraper {
+        flex-direction: row;
+
+        gap: 10px;
+    }
+
+    .box {
+        width: calc(90% / 2);
+       
+    }
+}
+
 
 
 /* ./Services */
