display block for hero image

--- a/css/master.css
+++ b/css/master.css
@@ -275,6 +275,9 @@
         .hero_image {
             width: calc(100% / 2);
         }
+        .hero_image {
+            display: block;
+        }
     }
     /* start hero */
     
