--- a/css/master.css
+++ b/css/master.css
@@ -13,8 +13,8 @@ html {
     --font-size-300: 1.25rem;
     --font-size-400: 1.563rem;
     --font-size-500: 1.953rem;
-    --font-size-600: 2.441rem;
-    --font-size-700: 2.8rem;
+    --font-size-600:2.441rem;
+    --font-size-700: 3.052rem;
 }
 
 html {
@@ -25,34 +25,32 @@ body {
     background-color: #161b28;
     color: #fff;
     font-family: var(--f-family);
+    line-height: 1.75;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-family: var(--f-family);
-    line-height: 1.3;
-    margin-bottom: 1rem;
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+ 
+  font-family: var(--f-family);
+  font-weight: 400;
+  line-height: 1.3;
 }
 
 h1 {
-    margin-top: 0;
-    font-size: var(--font-size-600);
+  margin-top: 0;
+  font-size: var(--font-size-700);
+  font-weight: 700;
 }
 
-h2 {
-    font-size: var(--font-size-500);
-}
+h2 {font-size:var(--font-size-600);}
 
-h3 {
-    font-size: var(--font-size-400);
-}
+h3 {font-size: var(--font-size-500);}
 
-h4 {
-    font-size: var(--font-size-300);
-}
+h4 {font-size: var(--font-size-400);}
+
+h5 {font-size:var(--font-size-300);}
+
 
 p {
     font-size: var(--font-size-200);
@@ -86,7 +84,7 @@ img {
 }
 
 .secion-p {
-    padding: 6rem 0;
+    padding: 4rem 0;
 }
 
 .container {
@@ -97,6 +95,22 @@ img {
     margin-left: auto;
 }
 
+.flow > * + * {
+    margin-top: var(--flow-space, 1em);
+  }
+  p,
+li {
+  max-width: 60ch;
+}
+
+h1 {
+  max-width: 15ch;
+}
+
+h2,
+h3 {
+  max-width: 25ch;
+}
 
 /* Small devices (landscape phones, 576px and up) */
 
@@ -253,7 +267,7 @@ header nav .links li a {
 .btn {
     padding: 0.6rem;
     display: inline-block;
-    margin: 1rem 0;
+    margin: 1rem 0.5rem;
     font-size: 16px;
     font-weight: 300;
     border-radius: 50px;
@@ -414,11 +428,12 @@ header nav .links li a {
 
 .services-wraper .box .services-icon {
     width: 100px;
-    height: 150px;
+    
 }
 
 .services-wraper .box .services-icon img {
     width: 100%;
+    height: 100px;
 }
 
 .services-wraper .box p {
@@ -544,19 +559,22 @@ header nav .links li a {
 
 .cta {
     background-color: var(--primary-color);
-    margin-top: -4rem;
-    z-index: -1;
-    position: relative;
+ 
+   
+   
 }
 
 .cta-wrpper {
-    display: flex;
-    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    width: 70%;
+    
 }
 
-.cta h3 {
-    line-height: 1.9rem;
+.cta h4 {
+    line-height: 2rem;
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 .btn-cta {
@@ -570,25 +588,24 @@ header nav .links li a {
     display: inline-block;
     color: #fff;
     text-align: center;
+    cursor: pointer;
+    margin-top: 1em;
+}
+.btn-cta:hover{
+    background: #20072ebf;
 }
 
 
 /* ./Cta */
 
 @media (min-width: 320px) and (max-width: 576px) {
-    .cta-wrpper {
-        flex-direction: column;
-    }
+   
 }
 
 @media (min-width: 768px) {
-    .cta-wrpper {
-        flex-direction: column;
-        width: 70%;
-        margin: 0 auto;
-    }
+  
     .btn-cta {
-        display: block;
+        display: inline-block;
         width: 150px;
     }
 }
