--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@ html {
     box-sizing: border-box;
 }
 
- :root {
+:root {
     --primary-color: #7750f8;
     --secondary-color: #1d2333;
     --f-family: "Raleway", sans-serif;
@@ -13,7 +13,7 @@ html {
     --font-size-300: 1.25rem;
     --font-size-400: 1.563rem;
     --font-size-500: 1.953rem;
-    --font-size-600:2.441rem;
+    --font-size-600: 2.441rem;
     --font-size-700: 3.052rem;
 }
 
@@ -26,30 +26,47 @@ body {
     color: #fff;
     font-family: var(--f-family);
     line-height: 1.75;
+    display: flex;
+    flex-direction: column;
 }
 
-p {margin-bottom: 1rem;}
+p {
+    margin-bottom: 1rem;
+}
 
-h1, h2, h3, h4, h5 {
- 
-  font-family: var(--f-family);
-  font-weight: 400;
-  line-height: 1.3;
+h1,
+h2,
+h3,
+h4,
+h5 {
+
+    font-family: var(--f-family);
+    font-weight: 400;
+    line-height: 1.3;
+    margin-bottom: 0.8rem;
 }
 
 h1 {
-  margin-top: 0;
-  font-size: var(--font-size-700);
-  font-weight: 700;
+    margin-top: 0;
+    font-size: var(--font-size-700);
+    font-weight: 700;
 }
 
-h2 {font-size:var(--font-size-600);}
+h2 {
+    font-size: var(--font-size-600);
+}
 
-h3 {font-size: var(--font-size-500);}
+h3 {
+    font-size: var(--font-size-500);
+}
 
-h4 {font-size: var(--font-size-400);}
+h4 {
+    font-size: var(--font-size-400);
+}
 
-h5 {font-size:var(--font-size-300);}
+h5 {
+    font-size: var(--font-size-300);
+}
 
 
 p {
@@ -57,7 +74,7 @@ p {
     line-height: 1.6rem;
     letter-spacing: 1px;
     color: #ccc;
-    margin-bottom: 2rem;
+  
 }
 
 ul {
@@ -73,6 +90,23 @@ img {
     max-width: 100%;
     width: 100%;
 }
+
+::selection {
+    color: #fff;
+    background: var(--primary-color);
+
+  }
+  [class^="ti-"], [class*=" ti-"]{
+      color: #fff;
+      font-size: 1.5rem;
+      transition: background-color 0.2s ease;
+      padding: 5px;
+      border-radius: 3px;
+  }
+  [class^="ti-"]:hover{
+      background-color: var(--primary-color);
+     
+  }
 
 .subtitle .title::before {
     content: "";
@@ -95,21 +129,22 @@ img {
     margin-left: auto;
 }
 
-.flow > * + * {
+.flow>*+* {
     margin-top: var(--flow-space, 1em);
-  }
-  p,
+}
+
+p,
 li {
-  max-width: 60ch;
+    max-width: 60ch;
 }
 
 h1 {
-  max-width: 15ch;
+    max-width: 15ch;
 }
 
 h2,
 h3 {
-  max-width: 25ch;
+    max-width: 25ch;
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -193,6 +228,7 @@ header nav .links li a {
     html {
         font-size: 15px;
     }
+
     header nav .links {
         position: fixed;
         background: #7750f8;
@@ -217,9 +253,11 @@ header nav .links li a {
         opacity: 0;
         z-index: 99999;
     }
+
     header nav .links li a {
         display: block;
     }
+
     .links.show {
         right: 0;
         visibility: visible;
@@ -231,6 +269,7 @@ header nav .links li a {
     header nav .links li {
         display: inline-block;
     }
+
     .menu-icon {
         display: none;
     }
@@ -303,6 +342,7 @@ header nav .links li a {
     .hero-wraper {
         grid-template-columns: repeat(2, 1fr);
     }
+
     .hero_image {
         display: block;
     }
@@ -341,6 +381,7 @@ header nav .links li a {
     html {
         font-size: 16px;
     }
+
     .about-wraper {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -401,10 +442,12 @@ header nav .links li a {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
     }
+
     .item {
         flex-wrap: nowrap;
         width: calc(100% / 3);
     }
+
     .skills_image img {
         width: 75%;
     }
@@ -428,7 +471,7 @@ header nav .links li a {
 
 .services-wraper .box .services-icon {
     width: 100px;
-    
+
 }
 
 .services-wraper .box .services-icon img {
@@ -450,6 +493,7 @@ header nav .links li a {
     .services-wraper {
         grid-template-columns: repeat(2, 1fr);
     }
+
     .box:last-of-type {
         grid-column: 1 / -1;
     }
@@ -459,9 +503,11 @@ header nav .links li a {
     html {
         font-size: 18px;
     }
+
     .services-wraper {
         grid-template-columns: repeat(3, 1fr);
     }
+
     .box:last-of-type {
         grid-column: auto;
     }
@@ -559,16 +605,16 @@ header nav .links li a {
 
 .cta {
     background-color: var(--primary-color);
- 
-   
-   
+
+
+
 }
 
 .cta-wrpper {
     text-align: center;
     margin: 0 auto;
     width: 70%;
-    
+
 }
 
 .cta h4 {
@@ -591,21 +637,104 @@ header nav .links li a {
     cursor: pointer;
     margin-top: 1em;
 }
-.btn-cta:hover{
+
+.btn-cta:hover {
     background: #20072ebf;
 }
 
 
 /* ./Cta */
 
-@media (min-width: 320px) and (max-width: 576px) {
-   
-}
+@media (min-width: 320px) and (max-width: 576px) {}
 
 @media (min-width: 768px) {
-  
+
     .btn-cta {
         display: inline-block;
         width: 150px;
     }
 }
+
+
+/* footer */
+footer{
+    margin-top: 4rem;
+}
+.footer-wrapper{
+    display: grid;
+  
+}
+
+footer .site_logo{
+width: 50%;
+margin-bottom: 1rem;
+}
+
+.contact-form{
+    background-color: var(--secondary-color);
+    padding: 1.2rem;
+}
+footer .social_media{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin: 1rem 0;
+
+}
+
+footer form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+input,textarea{
+    background: #161b28;
+    border: none;
+    display: inline-block;
+    width: 100%;
+    padding: 0.5rem;
+    margin: 1rem 0;
+    color: #fff;
+    font-size: 14px;
+}
+input[type="submit"]{
+cursor: pointer;
+}
+input:focus,textarea:focus{
+    border: 1px solid var(--primary-color);
+    outline: none !important;
+}
+label{
+    font-size: 0.7rem;
+}
+.subFooter{
+    background: var(--secondary-color);
+    padding:15px;
+    text-align: center;
+    margin-top: 1rem;
+}
+.subFooter p{
+    max-width: 100%;
+}
+.subFooter .ti-heart{
+    color: red;
+    font-size: 24px;
+}
+.subFooter a{
+    font-size: .8rem;
+    color: var(--primary-color);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+@media (min-width: 320px) and (max-width: 576px) {}
+
+@media (min-width: 768px) {
+    .footer-wrapper{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        gap: 2rem;
+    }
+   
+}
+/* footer */
