--- a/css/master.css
+++ b/css/master.css
@@ -674,6 +674,7 @@ margin-bottom: 1rem;
     background-color: var(--secondary-color);
     padding: 1.2rem;
     height: 30rem;
+    margin-top: 2rem;
 }
 .phone{
     font-size: .8rem;
