--- a/css/master.css
+++ b/css/master.css
@@ -74,7 +74,7 @@ p {
     line-height: 1.6rem;
     letter-spacing: 1px;
     color: #ccc;
-  
+
 }
 
 ul {
@@ -95,18 +95,21 @@ img {
     color: #fff;
     background: var(--primary-color);
 
-  }
-  [class^="ti-"], [class*=" ti-"]{
-      color: #fff;
-      font-size: 1rem;
-      transition: background-color 0.2s ease;
-      padding: 5px;
-      border-radius: 3px;
-  }
-  [class^="ti-"]:hover{
-      background-color: var(--primary-color);
-     
-  }
+}
+
+[class^="ti-"],
+[class*=" ti-"] {
+    color: #fff;
+    font-size: 1rem;
+    transition: background-color 0.2s ease;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+[class^="ti-"]:hover {
+    background-color: var(--primary-color);
+
+}
 
 .subtitle .title::before {
     content: "";
@@ -116,6 +119,12 @@ img {
     height: 40px;
     background-repeat: no-repeat;
 }
+
+.title span {
+    color: var(--primary-color);
+
+}
+
 
 .secion-p {
     padding: 4rem 0;
@@ -148,10 +157,11 @@ h3 {
 }
 
 
-span{
+.small-text {
     font-size: 0.7rem;
     color: #ccc;
 }
+
 /* Small devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) {
@@ -214,6 +224,7 @@ nav .site_logo {
 header nav .links li a {
     color: #fff;
     padding: 1rem;
+
     transition: color 0.2s ease-in-out;
     -webkit-transition: color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out;
@@ -228,7 +239,8 @@ header nav .links li a {
 .menu-icon {
     cursor: pointer;
 }
-.menu-icon span{
+
+.menu-icon span {
     font-size: 30px;
 }
 
@@ -245,18 +257,18 @@ header nav .links li a {
         bottom: 0;
         width: 20%;
         display: block;
-        text-align: right;
+
         width: 80%;
         border-radius: 3px;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         -ms-border-radius: 3px;
         -o-border-radius: 3px;
-        transition: right 0.2s ease-in-out;
-        -webkit-transition: right 0.2s ease-in-out;
-        -moz-transition: right 0.2s ease-in-out;
-        -ms-transition: right 0.2s ease-in-out;
-        -o-transition: right 0.2s ease-in-out;
+        transition: right 0.5s ease-in-out;
+        -webkit-transition: right 0.5s  ease;
+        -moz-transition: right 0.5s  ease;
+        -ms-transition: right 0.5s  ease;
+        -o-transition: right 0.5s ease;
         visibility: hidden;
         opacity: 0;
         z-index: 99999;
@@ -266,6 +278,7 @@ header nav .links li a {
         position: absolute;
         top: 15px;
         right: 15px;
+        cursor: pointer;
     }
 
     header nav .links li a {
@@ -276,6 +289,12 @@ header nav .links li a {
         right: 0;
         visibility: visible;
         opacity: 1;
+        transition: all 0.2s ease;
+    }
+   
+
+    .links.show li:first-of-type {
+        margin-top: 2rem;
     }
 }
 
@@ -284,9 +303,11 @@ header nav .links li a {
         display: inline-block;
     }
 
-    .menu-icon {
+    .menu-icon,
+    span.ti-close {
         display: none;
     }
+
 }
 
 
@@ -354,7 +375,8 @@ header nav .links li a {
 
 @media (min-width:768px) {
     .hero-wraper {
-        grid-template-columns: repeat(2, 1fr);
+        /* grid-template-columns: repeat(2, 1fr); */
+        grid-template-columns: 461px 274px;
     }
 
     .hero_image {
@@ -362,6 +384,12 @@ header nav .links li a {
     }
 }
 
+@media (min-width: 992px) {
+    .hero-wraper {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+}
 
 /* start hero */
 
@@ -385,6 +413,9 @@ header nav .links li a {
 .about-info h2 {
     margin-bottom: 1rem;
 }
+.about-img{
+    margin-right: 1rem;
+}
 
 
 /* @media (min-width: 320px) and (max-width: 576px) {
@@ -397,10 +428,18 @@ header nav .links li a {
     }
 
     .about-wraper {
-        grid-template-columns: repeat(2, 1fr);
+        /* grid-template-columns: repeat(2, 1fr); */
+        grid-template-columns: 293px 1fr;
+        gap: 15px;
     }
 }
+@media (min-width: 992px) {
 
+    .about-wraper {
+        grid-template-columns: repeat(2, 1fr);
+       
+    }
+}
 
 /* ./about */
 
@@ -439,6 +478,10 @@ header nav .links li a {
     display: flex;
     gap: 5px;
     justify-content: space-between;
+}
+
+.skills_image {
+    text-align: right;
 }
 
 .skilles img {
@@ -607,7 +650,7 @@ header nav .links li a {
 
 @media (min-width: 1200px) {
     html {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 
@@ -671,34 +714,40 @@ header nav .links li a {
 
 
 /* footer */
-footer{
+footer {
     margin-top: 4rem;
 }
-.footer-wrapper{
+
+.footer-wrapper {
     display: grid;
-  
+
 }
 
-footer .site_logo{
-width: 50%;
-margin-bottom: 1rem;
+footer .site_logo {
+    width: 50%;
+    margin-bottom: 1rem;
 }
 
-.contact-form{
+.contact-form {
     background-color: var(--secondary-color);
     padding: 1.2rem;
-    height: 30rem;
+    height: 33.8rem;
     margin-top: 2rem;
 }
-.phone{
+
+.phone {
     font-size: .8rem;
-    margin: .3rem 0 .2rem 0 ;
+    margin: .3rem 0 .2rem 0;
+
 }
-.location img{
+
+
+.location img {
     height: 400px;
     border-radius: 5px;
 }
-footer .social_media{
+
+footer .social_media {
     display: flex;
     flex-direction: row;
     gap: 0.3rem;
@@ -706,45 +755,55 @@ footer .social_media{
 
 }
 
-footer form{
+footer form {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-input,textarea{
+
+input,
+textarea {
     background: #161b28;
     border: none;
     display: inline-block;
     width: 100%;
     padding: 0.5rem;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     color: #fff;
     font-size: 14px;
 }
-input[type="submit"]{
-cursor: pointer;
+
+input[type="submit"] {
+    cursor: pointer;
 }
-input:focus,textarea:focus{
+
+input:focus,
+textarea:focus {
     border: 1px solid var(--primary-color);
     outline: none !important;
 }
-label{
+
+label {
     font-size: 0.7rem;
 }
-.subFooter{
+
+.subFooter {
     background: var(--secondary-color);
-    padding:15px;
+    padding: 15px;
     text-align: center;
     margin-top: 1rem;
 }
-.subFooter p{
+
+.subFooter p {
     max-width: 100%;
 }
-.subFooter .ti-heart{
+
+.subFooter .ti-heart {
     color: red;
     font-size: 24px;
 }
-.subFooter a{
+
+.subFooter a {
     font-size: .8rem;
     color: var(--primary-color);
     font-weight: 700;
@@ -754,11 +813,12 @@ label{
 @media (min-width: 320px) and (max-width: 576px) {}
 
 @media (min-width: 768px) {
-    .footer-wrapper{
+    .footer-wrapper {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         gap: 2rem;
     }
-   
+
 }
+
 /* footer */
