--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,7 @@ body {
     background-color: var(--body-color);
     color: var(--white-color);
     line-height: 1.75;
+    font-family: var(--f-family);
 
 }
 
@@ -114,6 +115,8 @@ img {
 
 }
 
+
+
 .subtitle .title::before {
     content: "";
     display: block;
@@ -134,12 +137,12 @@ img {
 }
 
 .container {
-  
+
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-  
+
 }
 
 .flow>*+* {
@@ -264,12 +267,12 @@ label {
 
 
 .container {
- 
+
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-  
+
 }
 
 
@@ -277,9 +280,10 @@ label {
 /**************
  * CUSTOM VAR *
  **************/
- .secion-p {
-    padding: 4rem 0;
+.secion-p {
+    padding: 5rem 0;
 }
+
 .subtitle .title::before {
     content: "";
     display: block;
@@ -295,47 +299,54 @@ label {
 /*                                Start header                                */
 /* -------------------------------------------------------------------------- */
 
-header nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-    align-items: center;
-    position: relative;
-   
-}
 
-header{
+
+header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background: transparent;
-    transition: all 0.10s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    position: fixed;
 }
-header.fixed{
+
+header.fixed {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background: linear-gradient(to right top, #051937, #041a43, #0d194e, #1b1758, #2c1160);
     z-index: 99999;
-  
-  
-   
+    transition: all 0.5s ease-in-out;
+
+
+
+
 }
-header.fixed  .links a:hover{
-    
-    text-shadow: 0px 11px 15px #8663fac0;
+
+header.fixed .links a:hover {
+
+    /* text-shadow: 0px 11px 15px #8663fac0; */
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 0;
+    align-items: center;
+    position: relative;
+
 }
 
 nav .site_logo {
     width: 100px;
 }
 
-header nav .links li a {
+header nav .links li {
     color: #fff;
     padding: 1rem;
-
+    cursor: pointer;
     transition: color 0.2s ease-in-out;
     -webkit-transition: color 0.2s ease-in-out;
     -moz-transition: color 0.2s ease-in-out;
@@ -344,7 +355,7 @@ header nav .links li a {
 }
 
 .links li a:hover {
-    color: var(--primary-color);
+    color: var(--white-color)
 }
 
 .menu-icon {
@@ -367,7 +378,7 @@ header nav .links li a {
     header nav .links {
         position: fixed;
         background: #7750f8;
-        top: 4.72rem;
+        top: 4.78rem;
         right: -30rem;
         bottom: 0;
         width: 20%;
@@ -438,7 +449,9 @@ header nav .links li a {
 
 .hero {
     background: var(--secondary-color);
-    
+  
+
+
 }
 
 .hero-wraper {
@@ -456,6 +469,9 @@ header nav .links li a {
     font-weight: 300;
     color: rgb(204, 199, 199);
 }
+.buttons-cta{
+    margin-top: 1rem;
+}
 
 .btn {
     padding: 0.6rem;
@@ -468,6 +484,7 @@ header nav .links li a {
     text-align: center;
     color: #fff;
 }
+
 
 .btn:hover {
     background-color: #593db4;
@@ -493,9 +510,18 @@ header nav .links li a {
  **********************************/
 
 @media (min-width: 320px) and (max-width: 576px) {
+    .hero {
+        padding: 10rem 0 0 0;
+    }
+
+    .hero .title {
+        font-size: var(--font-size-600);
+    }
+
     .hero_image {
         display: none;
     }
+
 }
 
 
@@ -505,13 +531,19 @@ header nav .links li a {
  **********************************/
 
 @media (min-width:768px) {
+    .hero {
+        padding: 7rem 0;
+    }
+
     .hero-wraper {
         /* grid-template-columns: repeat(2, 1fr); */
         grid-template-columns: 461px 274px;
+
     }
 
     .hero_image {
         display: block;
+     
     }
 }
 
@@ -555,7 +587,9 @@ header nav .links li a {
 .about-info h2 {
     margin-bottom: 1rem;
 }
-.about-img{
+
+
+.about-img {
     margin-right: 1rem;
 }
 
@@ -586,7 +620,7 @@ header nav .links li a {
 
     .about-wraper {
         grid-template-columns: repeat(2, 1fr);
-       
+
     }
 }
 
@@ -622,6 +656,9 @@ header nav .links li a {
     width: 100%;
     background-repeat: no-repeat;
 }
+.skills-info p{
+    margin-bottom: 1.2rem;
+}
 
 .skills-icons {
     display: flex;
@@ -641,7 +678,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR MOBILE VERSION *
  **********************************/
- @media (min-width: 320px) and (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
     .skills-icons {
         flex-direction: row;
     }
@@ -652,7 +689,7 @@ header nav .links li a {
  * MEDIA QUERY FOR Tablet VERSION *
  **********************************/
 
- @media (min-width: 720px) {
+@media (min-width: 720px) {
     .skills-wraper {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
@@ -687,6 +724,10 @@ header nav .links li a {
 
 }
 
+.services-info p{
+    margin-bottom: 1rem;
+}
+
 .services-wraper .box .services-icon img {
     width: 100%;
     height: 100px;
@@ -701,7 +742,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR MOBILE VERSION *
  **********************************/
- @media (min-width: 320px) and (max-width: 576px) {
+@media (min-width: 320px) and (max-width: 576px) {
     .services-wraper {
         flex-direction: column;
     }
@@ -710,7 +751,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR Tablet VERSION *
  **********************************/
- @media (min-width: 768px) {
+@media (min-width: 768px) {
     .services-wraper {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -723,7 +764,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR laptop and higher VERSION *
  **********************************/
- @media (min-width: 992px) {
+@media (min-width: 992px) {
     html {
         font-size: 18px;
     }
@@ -806,7 +847,7 @@ header nav .links li a {
  * MEDIA QUERY FOR Tablet VERSION *
  **********************************/
 
- @media (min-width: 768px) {
+@media (min-width: 768px) {
     .project-wraper {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
@@ -819,7 +860,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR laptop VERSION *
  **********************************/
- @media (min-width: 992px) {
+@media (min-width: 992px) {
     .project-wraper {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto;
@@ -829,7 +870,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR Big Screens VERSION *
  **********************************/
- @media (min-width: 1200px) {
+@media (min-width: 1200px) {
     html {
         font-size: 18px;
     }
@@ -849,7 +890,7 @@ header nav .links li a {
 .cta-wrpper {
     text-align: center;
     margin: 0 auto;
-    width: 70%;
+    width: 100%;
 
 }
 
@@ -887,7 +928,7 @@ header nav .links li a {
 /**********************************
  * MEDIA QUERY FOR Tablet VERSION *
  **********************************/
- @media (min-width: 768px) {
+@media (min-width: 768px) {
 
     .btn-cta {
         display: inline-block;
@@ -916,7 +957,7 @@ footer .site_logo {
 .contact-form {
     background-color: var(--secondary-color);
     padding: 1.2rem;
-    height: 33.8rem;
+    height: 36.8rem;
     margin-top: 2rem;
 }
 
@@ -975,12 +1016,28 @@ footer form {
 /**********************************
  * MEDIA QUERY FOR MOBILE VERSION *
  **********************************/
+@media (min-width: 320px) and (max-width: 576px) {
+    .contact-form {
+        order: 1;
+    }
 
+    footer .site_logo img {
+        width: 90%;
+        margin-top: 1rem;
+
+    }
+
+    .footer_soical_contact {
+        order: 2;
+        margin-top: 7rem;
+
+    }
+}
 
 /**********************************
  * MEDIA QUERY FOR Tablet VERSION *
  **********************************/
- @media (min-width: 768px) {
+@media (min-width: 768px) {
     .footer-wrapper {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
@@ -1003,7 +1060,3 @@ footer form {
 /**********************************
  * MEDIA QUERY FOR Big Screens VERSION *
  **********************************/
-
-
-
-
